# mono-fmt

./: Cargo.toml  README.md  bacon.toml
mono-fmt-macro/: Cargo.toml
mono-fmt-macro/src/: format.rs  lib.rs  parser.rs  to_tokens.rs
src/: args.rs  formatter.rs  lib.rs  opts.rs  write.rs
src/rust_core_impl/: aggregated.rs  mod.rs  num.rs
src/std_impl/: formatter.rs  mod.rs  num.rs
tests/: base.rs  num.rs
